bk_ida/gccida/c0/make_compound_operation
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6799:38: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  make_compound_operation( rtx x, rtx_code in_code) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6815:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v17; // [rsp+78h] [rbp-B8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6817:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v19; // [rsp+BCh] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v21; // [rsp+C4h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6834:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+10Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6835:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+110h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6849:87: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( code == COMPARE || rtx_class[( unsigned __int16)*( _DWORD *)x] == 60) && ( rtx)x[1] == const_int_rtx[64] ) 
                                                                                      ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6880:25: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return gen_rtx_fmt_e( ( rtx_code)( unsigned __int16)*( _DWORD *)tem, mode, tem->fld[0].rtx); 
                        ^~~~~~~~
                        rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6880:36: error: expected expression
return gen_rtx_fmt_e( ( rtx_code)( unsigned __int16)*( _DWORD *)tem, mode, tem->fld[0].rtx); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6914:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( x->fld[0].rtwint + 8)), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:6914:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( x->fld[0].rtwint + 8)), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/combine.c:7008:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rhs = ( rtx)x[1]; 
            ^~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_compound_operation/src/obj/combine.o] Error 1
